--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
     <div class="time-display" id="timeDisplay">0:00 / 0:00</div>
     <img src="/images/volume-up.png" alt="volumeIcon" id="volumeIcon">
     <input type="range" class="slider" id="volumeSlider" min="0" max="1" step="0.01" value="1">
-    <audio id="audio" src="resources/biografia_edit.wav" autoplay onerror="console.error('Error loading audio file')"></audio>
+    <audio id="audio" src="resources/biografiaEdit.wav" autoplay onerror="console.error('Error loading audio file')"></audio>
   </div>
 
   <script src="scripts/script.js"></script>
