--- a/bibliografia.html
+++ b/bibliografia.html
@@ -226,7 +226,7 @@
 </head>
 <body>
 
-  <nav>
+  <nav id="Home-Page-Top">
     <ul class="nav-links">
       <li><a href="index.html">ŻYCIORYS</a></li>
       <li><a href="bibliografia.html">BIBLIOGRAFIA</a></li>
@@ -237,8 +237,10 @@
   </nav>
 
   <main>
-    <div class="tab-content">
+    <div class="tab-content" >
       <p style="font-size: 1.5rem; text-align: center;">Bibliografia księdza kanonika dr Józefa Witkowskiego</p>
+
+      <hr style="width:100%;text-align:left;margin-left:0">
 
       <p><i>Diecezja Toruńska 2014. Struktura i duchowieństwo</i>, Toruń 2015.</p>
 
@@ -275,14 +277,14 @@
 
       <figure>
         <img src="skany/usa2.png" alt="content image" width="600px" height="400px">
-        <figcaption>Opis</figcaption>
+        <figcaption>Przyjaźń to jedyne dobro, którego wartość nigdy nie maleje</figcaption>
       </figure>  
 
     </div>
   </main>
 
   <footer>
-    Stopka
+    <a href="#Home-Page-Top">Powrót na górę strony</a>
   </footer>
 
 </body>
