--- a/film.html
+++ b/film.html
@@ -152,7 +152,7 @@
 </head>
 <body>
 
-  <nav>
+  <nav id="Home-Page-Top">
     <ul class="nav-links">
       <li><a href="index.html">ŻYCIORYS</a></li>
       <li><a href="bibliografia.html">BIBLIOGRAFIA</a></li>
@@ -164,14 +164,18 @@
 
   <main>
     <div class="tab-content">
-      <h1 id="p_top">Kochać było łatwo zapomnieć niemożliwe - film o poezji dla Józia</h1>
-      <br>
+      <p style="font-size: 1.5rem; text-align: center;">Kochać było łatwo zapomnieć niemożliwe - film o poezji dla Józia</p>
+      
+      <hr style="width:50%;text-align:left;margin:auto auto 10px;">
+
       <div class="figure">
-        <img class="image-main" src="/images/thumb1.jpg">
-        <a href="https://www.youtube.com/@BarbaraWitkowska-poezja" target="_blank"><img class="image-hover" src="/images/play_thumb.png"></a>
+        <img class="image-main" src="images/thumb1.jpg">
+        <a href="https://www.youtube.com/@BarbaraWitkowska-poezja" target="_blank"><img class="image-hover" src="images/play_thumb.png"></a>
       </div>
 
-      <p>( film "Republika Sztuki”) z YT ?</p>
+      <i><p style="text-align: center; margin: 0%;">Poezja katolicka Barbary Witkowskiej | Republika Kultury</p></i>
+
+      <br>
       
       <div class="galeria">
         <img src="skany/grupa4.png" alt="content image" width="600px" height="400px">
@@ -184,7 +188,7 @@
   </main>
 
   <footer>
-    Stopka
+    <a href="#Home-Page-Top">Powrót na górę strony</a>
   </footer>
 
 </body>
