--- a/parafia.html
+++ b/parafia.html
@@ -126,7 +126,7 @@
 </head>
 <body>
 
-  <nav>
+  <nav id="Home-Page-Top">
     <ul class="nav-links">
       <li><a href="index.html">ŻYCIORYS</a></li>
       <li><a href="bibliografia.html">BIBLIOGRAFIA</a></li>
@@ -139,9 +139,11 @@
   <main>
     <div class="tab-content">
 
-      <h2 id="p_top">Parafia rzymskokatolicka p.w. Chrystusa Króla w Toruniu</h2>
+      <p style="font-size: 1.5rem; text-align: center;">Parafia rzymskokatolicka p.w. Chrystusa Króla w Toruniu</p>
 
-      <img src="/images/kosciol.jpg" alt="Kościół" width="100%">
+      <hr style="width:100%;text-align:left;margin-left:0; margin-bottom: 10px;">
+
+      <img src="images/kosciol.jpg" alt="Kościół" width="100%">
 
       <p>Kościół jest zbudowany na planie centralnym z żelbetonu i cegły w kształcie rotundy przypominającej rzymski Panteon. Kościół jest otynkowany, nakryty kopułą o sklepieniu kryształowym, pokryty blachą cynkową i zwieńczony latarnią. Do rotundy przylegają dwa duże rozality. Pierwszy od strony północnej jako kruchta tworzy przedsionek i chór. Jego stronę frontową zdobi duża płaskorzeźba Chrystusa Króla stojącego na kuli ziemskiej, dzieło artysty rzeźbiarza St. Zelka. Po bokach rozalitu wybudowano dwie niewielkie czworoboczne wieżyczki, zakończone w górnej partii blendami.</p>
 
@@ -154,10 +156,10 @@
       <p>Na chórze zamontowano 1935 r. organy Sauera, które w 1946 r. powiększono do 14-tu głosów, do dwóch manuałów i pedału. W 1930 r. wyposażono kościół w instalację elektryczną, a 1950 r. w radiofonię, a od 1957 r. w ogrzewanie węglowe, które w 1995 r. zmodernizowano i zamieniono na ogrzewanie gazowe.</p>
 
       <div class="wrapper">
-        <div><img src="./skany/kosciol1.png" alt=""></div>
-        <div><img src="./skany/kosciol3.png" alt=""></div>
-        <div><img src="./skany/kosciol2.png" alt=""></div>
-        <div><img src="./skany/kosciol4.png" alt=""></div>
+        <div><img src="skany/kosciol1.png" alt=""></div>
+        <div><img src="skany/kosciol3.png" alt=""></div>
+        <div><img src="skany/kosciol2.png" alt=""></div>
+        <div><img src="skany/kosciol4.png" alt=""></div>
       </div>
 
       <br>
@@ -169,7 +171,7 @@
   </main>
 
   <footer>
-    Stopka
+    <a href="#Home-Page-Top">Powrót na górę strony</a>
   </footer>
 
 </body>
