--- a/poezja.html
+++ b/poezja.html
@@ -38,14 +38,28 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      position: relative;
+      z-index: 2;
     }
+
+    .nav-toggle {
+      display: none;
+      position: absolute;
+      left: 1rem;
+      font-size: 2rem;
+      cursor: pointer;
+      z-index: 3;
+    }
+
     nav ul {
       list-style: none;
       display: flex;
     }
+
     nav li {
       margin: 0 3rem;
     }
+
     nav a {
       display: block;
       padding: 0.5rem 1rem;
@@ -53,9 +67,78 @@
       text-decoration: none;
       font-weight: bold;
     }
+
     nav a.active,
     nav a:hover {
       color: #464646;
+    }
+
+    /* Overlay (ciemne tło) */
+    .overlay {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.5);
+      z-index: 1;
+    }
+
+        /* Ukryj X na desktopie */
+    .close-btn {
+      display: none;
+    }
+
+    /* Mobile styles */
+    @media (max-width: 768px) {
+      .nav-toggle {
+        display: block;
+        position: absolute;
+        left: 1rem;
+        font-size: 2rem;
+        cursor: pointer;
+        z-index: 3;
+
+      }
+
+      .close-btn {
+        display: block;
+        font-size: 2rem;
+        margin-left: auto;
+      }
+
+      .nav-links {
+        flex-direction: column;
+        position: fixed;
+        top: 0;
+        left: -100%;
+        width: 250px;
+        height: 100%;
+        background: #f3f3f3;
+        padding-top: 6rem;
+        transition: left 0.3s ease;
+        z-index: 2;
+      }
+
+      .nav-links.open {
+        left: 0;
+      }
+
+      .overlay {
+        display: none;
+      }
+
+      .overlay.show {
+        display: block;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0,0,0,0.5);
+        z-index: 1;
+      }
     }
 
     main {
@@ -109,7 +192,7 @@
     .figure-container {
       display: flex;
       align-items: center;
-      justify-content: center;
+      justify-content: flex-start;
       gap: 20px;
       max-width: 900px;
       margin: 40px auto;
@@ -146,6 +229,20 @@
     .image-hover:hover {
       opacity: 1;
       background-color: rgba(0, 0, 0, 0.5);
+    }
+
+    @media (max-width: 768px) {
+      .figure-container {
+        flex-direction: column;
+      }
+
+      .figure-container .text-block {
+        order: 1;
+      }
+
+      .figure-container .figure {
+        order: 2;
+      }
     }
 
 
@@ -185,7 +282,10 @@
 <body>
 
   <nav id="Home-Page-Top">
+    <div class="nav-toggle">&#9776;</div> <!-- hamburger -->
+    <div class="overlay"></div>           <!-- ciemne tło -->
     <ul class="nav-links">
+      <li class="close-btn"><span>&#x2715;</span></li>
       <li><a href="index.html">ŻYCIORYS</a></li>
       <li><a href="bibliografia.html">BIBLIOGRAFIA</a></li>
       <li><a href="parafia.html">PARAFIA</a></li>
@@ -535,6 +635,8 @@
   <footer>
     <a href="#Home-Page-Top">Powrót na górę strony</a>
   </footer>
+
+  <script src="scripts/script.js"></script>
 
 </body>
 </html>
