--- a/poezja.html
+++ b/poezja.html
@@ -234,6 +234,7 @@
     @media (max-width: 768px) {
       .figure-container {
         flex-direction: column;
+        text-align: center;
       }
 
       .figure-container .text-block {
