--- a/index.html
+++ b/index.html
@@ -99,6 +99,10 @@
 
     /* Mobile styles */
     @media (max-width: 768px) {
+      .tab-content{
+        font-size: 1rem;
+      }
+
       .nav-toggle {
         display: block;
         position: absolute;
