--- a/bibliografia.html
+++ b/bibliografia.html
@@ -98,6 +98,10 @@
 
     /* Mobile styles */
     @media (max-width: 768px) {
+      .tab-content{
+        font-size: 1rem;
+      }
+      
       .nav-toggle {
         display: block;
         position: absolute;
