--- a/bibliografia.html
+++ b/bibliografia.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Przykład layoutu</title>
+  <title>Bibliografia</title>
   <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
   <style>
     * {
@@ -349,7 +349,7 @@
 
       <p>Rumińska Jolanta, <i>80. rocznica Franciszkańskiego Zakonu Świeckich</i>, Niedziela, Głos z Torunia, nr 43: 2011.</p>
 
-      <p>Rozynkowski <i>Waldemar, Ksiądz kanonik dr Józef Witkowski (1939-2023)</i>, w: Barbara Witkowska, <b>wstawić tytuł tomiku wierszy, który będzie wydany</b>, Toruń 2025.</p>
+      <p>Rozynkowski <i>Waldemar, Ksiądz kanonik dr Józef Witkowski (1939-2023)</i>, w: Barbara Witkowska, <b>tomik w trakcie wydawania</b>, Toruń 2025.</p>
 
       <p>Witkowski Józef ks., <i>Jubileuszowe rekolekcje dla nauczycieli i katechetów</i>, Niedziela, Głos z Torunia, nr 28: 2000.</p>
 
