--- a/poezja.html
+++ b/poezja.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Przykład layoutu</title>
+  <title>Poezja</title>
   <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
   <style>
     * {
