--- a/poezja.html
+++ b/poezja.html
@@ -297,6 +297,7 @@
       <li><a href="parafia.html">PARAFIA</a></li>
       <li><a href="film.html">FILM</a></li>
       <li><a href="poezja.html">POEZJA</a></li>
+      <li><a href="kalendarium.html">KALENDARIUM</a></li>
     </ul>
   </nav>
 
