--- a/parafia.html
+++ b/parafia.html
@@ -224,6 +224,7 @@
       <li><a href="parafia.html">PARAFIA</a></li>
       <li><a href="film.html">FILM</a></li>
       <li><a href="poezja.html">POEZJA</a></li>
+      <li><a href="kalendarium.html">KALENDARIUM</a></li>
     </ul>
   </nav>
 
