--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
+  <meta name="google-site-verification" content="sPDvy6pSU6epzctJIOoZtzX2OE9RtFXqdpErqnoQAR8" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Ksiądz kanonik Józef Witkowski</title>
